--- a/assets/css/_var.scss
+++ b/assets/css/_var.scss
@@ -1,10 +1,16 @@
 $white: #ffffff;
 $black: #4A4A46;
+$pureblack: #1a1a1a;
+$lightgray: #eeeeee;
+$smokygray: #f7f7f7;
 $gray: #cccccc;
 $primary: #7ED321;
-
+$brown: #43260B;
 $sans-serif: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", "Helvetica", "Arial", sans-serif;
 
+
+$input-height-normal: 40px;
+$input-height: 56px;
 // $info: $blue !default;
 // $success: $green !default;
 // $warning: $yellow !default;
