--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -1,7 +1,7 @@
 @import './var';
 @import './normalize';
 html {
-  background-color: $white;
+  background-color: $smokygray;
   color: $black;
   font-family: $sans-serif;
   font-size: 1rem;
@@ -10,5 +10,11 @@ html {
   -webkit-font-smoothing: antialiased;
   font-weight: 400;
   line-height: 1.428571428571429;
+}
+img {
+  display: block;
+  max-width: 100%;
+  height: auto;
+  margin: auto;
 }
 @import './components';
