--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -9,7 +9,7 @@ html {
   font-smoothing: antialiased;
   -webkit-font-smoothing: antialiased;
   font-weight: 400;
-  line-height: 1.428571428571429;
+  line-height: 1.6;
 }
 img {
   display: block;
