--- a/assets/css/_components.scss
+++ b/assets/css/_components.scss
@@ -1,3 +1,4 @@
+@import "~breakpoint-sass";
 // Containers
 .container {
   box-sizing: border-box;
@@ -20,9 +21,17 @@
 }
 // Columns
 .columns {
-  display: flex;
   .column {
-    flex: 1;
+  }
+  @include breakpoint(1024px) {
+    display: flex;
+    .column {
+      flex: 1;
+      margin-right: 1em;
+      &:last-child {
+        margin-right: 0;
+      }
+    }
   }
 }
 
@@ -39,6 +48,7 @@
           justify-content: center;
   .hero-content {
     align-self: center;
+    width: 100%;
   }
 }
 
@@ -75,8 +85,22 @@
 .frame {
   background-color: $white;
   box-shadow: 1px 1px 2px 1px $lightgray;
+  padding: 1em;
   .title {
-    margin: 0;
+    margin-top: 0;
+  }
+}
+
+//Gray Box
+.gray-box {
+  background-color: $smokygray;
+  padding: .2em 1em;
+  margin: 1em 0;
+  box-sizing: border-box;
+  font-size: .875em;
+  a {
+    color: $link;
+    text-decoration: none;
   }
 }
 @import "~assets/css/components/buttons";
