--- a/assets/css/components/_buttons.scss
+++ b/assets/css/components/_buttons.scss
@@ -8,6 +8,11 @@
   margin: 0 .2em;
   padding: .4em 1em;
   color: $black;
+  line-height: 1.6;
+  &.full {
+    width: 100%;
+    margin: 0;
+  }
   &:hover {
     transition: .3s all ease;
     background-color: $primary;
@@ -25,9 +30,12 @@
     border-color: $primary;
     &:hover {
       transition: .3s all ease;
-      background-color: $white;
-      color: $black;
-      border-color: $gray;
+      background-color: darken($primary, 5%);
+      color: $white;
+      border-color: darken($primary, 10%);
+    }
+    &:active {
+      box-shadow:inset 0px 0px 3px 0px darken($primary, 15%);
     }
   }
   &.primary {
