--- a/assets/css/components/_form.scss
+++ b/assets/css/components/_form.scss
@@ -1,9 +1,17 @@
 .controlgroup {
   margin: 2em 0;
+  &:first-child {
+    margin-top: 0;
+  }
+  &:last-child {
+    margin-bottom: 0;
+  }
   .controls {
     display: flex;
     input[type="search"] {
       flex: 1;
+      height: $input-height;
+      padding: 0 1em;
     }
   }
   input[type="search"] {
@@ -26,7 +34,7 @@
       display: inline-block;
       vertical-align: middle;
       border-radius: 0 3px 3px 0;
-      width: 20%;
+      width: 25%;
       height: $input-height;
       box-sizing: border-box;
       padding: .4em 1em;
@@ -52,15 +60,18 @@
   .controls {
     position: relative;
     input {
-      border-width: 0 0 1px 0;
-      border-color: $gray;
+      width: 100%;
+      border-bottom: 1px solid $gray;
+      border-top: 0;
+      border-left: 0;
+      border-right: 0;
       height: $input-height-normal;
       box-sizing: border-box;
-      padding: 0 1em;
+      padding: 0 1em 0 0;
       display: inline-block;
       vertical-align: middle;
       position: relative;
-      // z-index: 1;
+      z-index: 1;
       transition: .3s all ease;
       & + label {
         color: $gray;
@@ -68,14 +79,19 @@
         left: 0;
         top: 0;
         transform: translateX(0) translateY(0);
+        opacity: 0;
+        font-size: 12px;
         transition: .3s all ease;
       }
-      &:focus {
+      &:focus, &.active {
         outline: none;
-        border-color: $black;
+        border-color: $secondary;
+        &::placeholder {
+          color: $white;
+        }
         & + label {
-          color: $pureblack;
-          font-size: 12px;
+          opacity: 1;
+          color: $secondary;
           transform: translateX(0) translateY(-1.5em);
         }
       }
