--- a/assets/css/_var.scss
+++ b/assets/css/_var.scss
@@ -7,6 +7,7 @@ $gray: #cccccc;
 $primary: #7ED321;
 $secondary: #F6A623;
 $link: #4990E2;
+$red: #ff3300;
 $brown: #43260B;
 $sans-serif: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", "Helvetica", "Arial", sans-serif;
 
