--- a/assets/css/components/_buttons.scss
+++ b/assets/css/components/_buttons.scss
@@ -48,4 +48,9 @@
       border-color: darken($primary, 5%);
     }
   }
+  &.warning {
+    background-color: $red;
+    border-color: $red;
+    color: $white;
+  }
 }
