--- a/assets/css/_var.scss
+++ b/assets/css/_var.scss
@@ -4,6 +4,7 @@ $pureblack: #1a1a1a;
 $lightgray: #eeeeee;
 $smokygray: #f7f7f7;
 $gray: #cccccc;
+$darkgray: #666666;
 $primary: #7ED321;
 $secondary: #F6A623;
 $link: #4990E2;
