--- a/assets/css/components/_buttons.scss
+++ b/assets/css/components/_buttons.scss
@@ -9,6 +9,7 @@
   padding: .4em 1em;
   color: $black;
   line-height: 1.6;
+  background-color: transparent;
   &.full {
     width: 100%;
     margin: 0;
