--- a/assets/css/components/_buttons.scss
+++ b/assets/css/components/_buttons.scss
@@ -54,4 +54,10 @@
     border-color: $red;
     color: $white;
   }
+  &[disabled] {
+    background-color: $lightgray;
+    border: 1px solid $lightgray;
+    color: $gray;
+    text-shadow: 1px 1px 0 $white;
+  }
 }
