--- a/assets/css/components/_type.scss
+++ b/assets/css/components/_type.scss
@@ -1,6 +1,9 @@
 @import "~breakpoint-sass";
-h1, h2, h3, h4 {
+h1, h2 {
   font-weight: 300;
+}
+h3, h4 {
+  color: $pureblack;
 }
 @include breakpoint(768px) {
  h1 {
