another delay damn..

--- a/assets/css/_components.scss
+++ b/assets/css/_components.scss
@@ -79,7 +79,7 @@
       transform-origin: center bottom;
       transform: scaleX(1.5);
     }
-    .controlgroup .controls + span {
+    .controlgroup .controls span {
       color: $black;
     }
   }
