--- a/assets/css/components/_form.scss
+++ b/assets/css/components/_form.scss
@@ -25,6 +25,8 @@
     }
   }
   input[type="search"] {
+    webkit-appearance: none;
+    appearance: none;
     border: 0;
     height: $input-height;
     box-sizing: border-box;
@@ -35,7 +37,7 @@
     color: $black;
     // box-shadow: inset 0px 0px 6px 0px $black;
     &:focus {
-      box-shadow: inset 0px 0px 3px 0px $pureblack;
+      // box-shadow: inset 0px 0px 3px 0px $pureblack;
     }
     & + button {
       // box-shadow: 1px 1px 1px 1px $pureblack;
