--- a/assets/css/_var.scss
+++ b/assets/css/_var.scss
@@ -9,6 +9,7 @@ $primary: #7ED321;
 $secondary: #F6A623;
 $link: #4990E2;
 $red: #D0011B;
+$pink: #fb8f9d;
 $brown: #43260B;
 $sans-serif: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", "Helvetica", "Arial", sans-serif;
 
