--- a/assets/css/components/_form.scss
+++ b/assets/css/components/_form.scss
@@ -18,53 +18,54 @@
         margin: .5em 0;
       }
     }
-    input[type="search"] {
+    input[type="tel"] {
       flex: 1;
       height: $input-height;
       padding: 0 1em;
-    }
-  }
-  input[type="search"] {
-    webkit-appearance: none;
-    appearance: none;
-    border: 0;
-    height: $input-height;
-    box-sizing: border-box;
-    padding: 0 1em;
-    display: inline-block;
-    vertical-align: middle;
-    border-radius: 3px 0 0 3px;
-    color: $black;
-    // box-shadow: inset 0px 0px 6px 0px $black;
-    &:focus {
-      // box-shadow: inset 0px 0px 3px 0px $pureblack;
-    }
-    & + button {
-      // box-shadow: 1px 1px 1px 1px $pureblack;
-      outline: none;
+      -webkit-appearance: none;
+      appearance: none;
       border: 0;
+      box-sizing: border-box;
+      padding: 0 1em;
       display: inline-block;
       vertical-align: middle;
-      border-radius: 0 3px 3px 0;
-      width: 25%;
-      height: $input-height;
-      box-sizing: border-box;
-      padding: .4em 1em;
-      background-color: $primary;
-      color: darken($primary, 20%);
-      cursor: pointer;
-      text-shadow: 1px 1px 0 rgba($white, .5);
-      transition: .3s all ease;
-      &:hover {
-        background-color: darken($primary, 5%);
-        color: $white;
-        text-shadow: none;
-        width: 33%;
+      border-radius: 3px 0 0 3px;
+      color: $black;
+      // box-shadow: inset 0px 0px 6px 0px $black;
+      &:focus {
+        // box-shadow: inset 0px 0px 3px 0px $pureblack;
       }
-      &:active {
-        background-color: darken($primary, 5%);
-        box-shadow:inset 0px 0px 3px 1px darken($primary, 25%);
-        text-shadow: none;
+      & + button {
+        // box-shadow: 1px 1px 1px 1px $pureblack;
+        outline: none;
+        border: 0;
+        display: inline-block;
+        vertical-align: middle;
+        border-radius: 0 3px 3px 0;
+        width: 25%;
+        height: $input-height;
+        box-sizing: border-box;
+        padding: .4em 1em;
+        background-color: $primary;
+        color: darken($primary, 20%);
+        cursor: pointer;
+        text-shadow: 1px 1px 0 rgba($white, .5);
+        transition: .3s all ease;
+        &:hover {
+          background-color: darken($primary, 5%);
+          color: $white;
+          text-shadow: none;
+          width: 33%;
+        }
+        &:active {
+          background-color: darken($primary, 5%);
+          box-shadow:inset 0px 0px 3px 1px darken($primary, 25%);
+          text-shadow: none;
+        }
+      }
+      &.error {
+        background-color: $pink;
+        border: 1px solid $red;
       }
     }
   }
