--- a/assets/css/_components.scss
+++ b/assets/css/_components.scss
@@ -36,6 +36,7 @@
     .column {
       flex: 1;
       margin-right: 1em;
+      margin-bottom: 0;
       &:last-child {
         margin-right: 0;
       }
@@ -62,7 +63,7 @@
 
 // Hero
 .hero-container {
-  height: 80vh;
+  height: 70vh;
   min-height: 500px;
   // background-color: $gray;
   color: $white;
