--- a/assets/css/_var.scss
+++ b/assets/css/_var.scss
@@ -11,7 +11,7 @@ $link: #4990E2;
 $red: #D0011B;
 $pink: #fb8f9d;
 $brown: #43260B;
-$sans-serif: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", "Helvetica", "Arial", sans-serif;
+$sans-serif: -apple-system, BlinkMacSystemFont, "Noto Sans TC", "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", "Helvetica", "Arial", sans-serif;
 
 
 $input-height-normal: 40px;
