--- a/assets/css/components/_type.scss
+++ b/assets/css/components/_type.scss
@@ -4,9 +4,18 @@ h1, h2 {
 }
 h3, h4 {
   color: $pureblack;
+  span {
+    display: block;
+    font-size: .7em;
+    font-weight: normal;
+    color: $darkgray;
+  }
 }
 @include breakpoint(768px) {
  h1 {
   // font-size: 3em;
  }
+}
+.small {
+  font-size: 12px;
 }
