[ Modify ] Clean Api call and fix typo.

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -1,6 +1,7 @@
 @import './var';
 @import './normalize';
-@import url(https://fonts.googleapis.com/earlyaccess/notosanstc.css);
+@import url('https://fonts.googleapis.com/earlyaccess/notosanstc.css');
+@import url('https://fonts.googleapis.com/css?family=Ubuntu+Mono');
 html {
   background-color: $smokygray;
   color: $black;
