--- a/assets/css/components/_form.scss
+++ b/assets/css/components/_form.scss
@@ -145,6 +145,9 @@
       &.error {
         background-color: $pink;
       }
+      &[readonly] {
+        color: $darkgray;
+      }
     }
     &.error {
       input.required {
