--- a/assets/css/components/_form.scss
+++ b/assets/css/components/_form.scss
@@ -74,6 +74,21 @@
   // With Label
   .controls {
     position: relative;
+    label {
+      input[type="checkbox"] {
+        width: auto;
+        height: inherit;
+        font-size: inherit;
+        display: inline-block;
+        vertical-align: middle;
+        & + span {
+          margin-top: 0;
+          margin-left: .5em;
+          display: inline-block;
+          vertical-align: middle;
+        }
+      }
+    }
     textarea {
       width: 100%;
       min-height: 250px;
