--- a/assets/css/components/_form.scss
+++ b/assets/css/components/_form.scss
@@ -177,6 +177,23 @@
       display: block;
       margin-top: .5em;
     }
+    &.check-group {
+      .check-item {
+        flex: 1;
+        label {
+          input {
+            width: auto;
+          }
+          span {
+            font-size: 1em;
+            margin-top: 0;
+            margin-left: .5em;
+            display: inline-block;
+            vertical-align: middle;
+          }
+        }
+      }
+    }
   }
 }
 
