舉報介面改進/樣式調整

--- a/assets/css/components/_form.scss
+++ b/assets/css/components/_form.scss
@@ -178,8 +178,14 @@
       margin-top: .5em;
     }
     &.check-group {
+      display: block;
       .check-item {
-        flex: 1;
+        display: inline-block;
+        vertical-align: middle;
+        margin-right: 1em;
+        &:last-child {
+          margin: 0;
+        }
         label {
           input {
             width: auto;
