--- a/assets/css/_components.scss
+++ b/assets/css/_components.scss
@@ -165,6 +165,9 @@
     color: $link;
     text-decoration: none;
   }
+  .controlgroup {
+    font-size: 1rem;
+  }
 }
 // Notify
 .notification-bar {
@@ -173,6 +176,7 @@
   box-sizing: border-box;
   box-shadow: 0 1px 1px rgba($black, .33);
   text-align: center;
+  margin: 1em 0;
   span {
     display: block;
     font-size: 12px;
