--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -1,3 +1,6 @@
+@import '~bulma/sass/utilities/all';
+@import '~bulma/sass/base/all';
+@import '~bulma/sass/grid/all';
 @import './var';
 @import './normalize';
 @import url('https://fonts.googleapis.com/earlyaccess/notosanstc.css');
