line-heights and line-break

--- a/assets/css/components/_form.scss
+++ b/assets/css/components/_form.scss
@@ -98,6 +98,7 @@
       display: inline-block;
       vertical-align: middle;
       transition: .3s all ease;
+      line-height: 1.6;
       & + label {
         color: $gray;
         position: absolute;
