--- a/assets/css/components/_buttons.scss
+++ b/assets/css/components/_buttons.scss
@@ -1,3 +1,15 @@
+.icon-button {
+  i {
+    font-size: 2em;
+    display: inline-block;
+    vertical-align: middle;
+    & + span {
+      display: inline-block;
+      vertical-align: middle;
+      margin-left: .5em;
+    }
+  }
+}
 .button {
   text-decoration: none;
   border: 1px solid $gray;
